--- a/index.html
+++ b/index.html
@@ -1,104 +1,120 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My Shifts</title>
+  <meta charset="UTF-8">
+  <title>Shift Rota Calendar</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
   <style>
     body {
-      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-      background: #f2f2f7;
       margin: 0;
-      padding: 20px;
+      padding: 16px;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background: #f2f2f7;
     }
 
     h1 {
       text-align: center;
+      margin-bottom: 16px;
     }
 
-    .card {
+    .calendar {
       background: white;
-      border-radius: 16px;
-      padding: 20px;
-      margin-top: 15px;
+      border-radius: 12px;
+      overflow: hidden;
       box-shadow: 0 5px 15px rgba(0,0,0,0.1);
     }
 
-    select, input, button {
-      width: 100%;
-      padding: 14px;
-      font-size: 16px;
-      margin-top: 10px;
-      border-radius: 10px;
-      border: 1px solid #ddd;
+    .header, .row {
+      display: grid;
+      grid-template-columns: 60px repeat(5, 1fr);
+      text-align: center;
+      align-items: center;
     }
 
-    button {
-      background: #007AFF;
-      color: white;
-      border: none;
-      margin-top: 20px;
-    }
-
-    .shift {
-      font-size: 22px;
+    .header {
+      background: #e5e5ea;
       font-weight: bold;
-      margin-top: 10px;
+      height: 44px;
     }
+
+    .row div {
+      padding: 10px 0;
+      border-bottom: 1px solid #ddd;
+      font-size: 16px;
+    }
+
+    .date {
+      font-weight: bold;
+    }
+
+    /* Shift colors */
+    .M { background: #ffe599; }   /* Morning */
+    .A { background: #9fc5e8; }   /* Afternoon / Noon */
+    .N { background: #8e7cc3; color: white; } /* Night */
+    .O { background: #d9d9d9; }   /* Off */
   </style>
 </head>
 
 <body>
 
-<h1>My Shifts</h1>
+<h1 id="monthTitle"></h1>
 
-<div class="card">
-  <label>Group</label>
-  <select id="group">
-    <option value="0">Group A</option>
-    <option value="1">Group B</option>
-    <option value="2">Group C</option>
-    <option value="3">Group D</option>
-    <option value="4">Group E</option>
-  </select>
+<div class="calendar">
+  <div class="header">
+    <div>Date</div>
+    <div>A</div>
+    <div>B</div>
+    <div>C</div>
+    <div>D</div>
+    <div>E</div>
+  </div>
 
-  <label>Start Date</label>
-  <input type="date" id="startDate">
-
-  <button onclick="calculateShift()">Show</button>
-</div>
-
-<div class="card">
-  <div>Today</div>
-  <div class="shift" id="today"></div>
-
-  <div style="margin-top:15px;">Tomorrow</div>
-  <div class="shift" id="tomorrow"></div>
+  <div id="calendarBody"></div>
 </div>
 
 <script>
-const shifts = [
-  "Morning (7–3)",
-  "Noon (3–11)",
-  "Night (11–7)",
-  "Off",
-  "Off"
-];
+  // Shift pattern: Morning, Afternoon, Night, Off, Off
+  const shifts = ["M", "A", "N", "O", "O"];
 
-function calculateShift() {
-  const g = parseInt(document.getElementById("group").value);
-  const start = new Date(document.getElementById("startDate").value);
+  // Reference: Jan 1, 2026 = Group A = Morning
+  const referenceDate = new Date(2026, 0, 1);
+
   const today = new Date();
+  const year = today.getFullYear();
+  const month = today.getMonth();
 
-  const days = Math.floor((today - start) / 86400000);
-  const todayIndex = (days + g) % 5;
-  const tomorrowIndex = (todayIndex + 1) % 5;
+  // Set month title
+  document.getElementById("monthTitle").innerText =
+    today.toLocaleString("default", { month: "long" }) + " " + year;
 
-  document.getElementById("today").innerText = shifts[todayIndex];
-  document.getElementById("tomorrow").innerText = shifts[tomorrowIndex];
-}
+  const daysInMonth = new Date(year, month + 1, 0).getDate();
+  const calendarBody = document.getElementById("calendarBody");
+
+  for (let day = 1; day <= daysInMonth; day++) {
+    const row = document.createElement("div");
+    row.className = "row";
+
+    const dateCell = document.createElement("div");
+    dateCell.className = "date";
+    dateCell.innerText = day;
+    row.appendChild(dateCell);
+
+    const currentDate = new Date(year, month, day);
+    const diffDays = Math.floor((currentDate - referenceDate) / 86400000);
+
+    for (let group = 0; group < 5; group++) {
+      const shiftIndex = (diffDays + group) % 5;
+      const cell = document.createElement("div");
+      cell.innerText = shifts[shiftIndex];
+      cell.className = shifts[shiftIndex];
+      row.appendChild(cell);
+    }
+
+    calendarBody.appendChild(row);
+  }
 </script>
 
 </body>
