--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Shift Rota Calendar</title>
+  <title>Shift Calendar</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
   <style>
     body {
@@ -17,7 +16,42 @@
 
     h1 {
       text-align: center;
-      margin-bottom: 16px;
+      margin: 10px 0;
+    }
+
+    .controls {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 12px;
+      gap: 10px;
+    }
+
+    select, button {
+      padding: 8px 12px;
+      border-radius: 8px;
+      font-size: 16px;
+      border: none;
+    }
+
+    button {
+      background: #007AFF;
+      color: white;
+    }
+
+    .month-nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 12px;
+    }
+
+    .month-nav button {
+      font-size: 22px;
+      padding: 6px 14px;
+      border-radius: 10px;
+      border: none;
+      background: #007AFF;
+      color: white;
     }
 
     .calendar {
@@ -29,7 +63,7 @@
 
     .header, .row {
       display: grid;
-      grid-template-columns: 60px repeat(5, 1fr);
+      grid-template-columns: 100px repeat(5, 1fr);
       text-align: center;
       align-items: center;
     }
@@ -43,78 +77,170 @@
     .row div {
       padding: 10px 0;
       border-bottom: 1px solid #ddd;
-      font-size: 16px;
+      font-size: 15px;
     }
 
     .date {
       font-weight: bold;
+      line-height: 1.2;
+    }
+
+    .day {
+      font-size: 13px;
+      color: #555;
     }
 
     /* Shift colors */
-    .M { background: #ffe599; }   /* Morning */
-    .A { background: #9fc5e8; }   /* Afternoon / Noon */
-    .N { background: #8e7cc3; color: white; } /* Night */
-    .O { background: #d9d9d9; }   /* Off */
+    .M { background: #ffe599; }
+    .A { background: #9fc5e8; }
+    .N { background: #8e7cc3; color: white; }
+    .O { background: #d9d9d9; }
+
+    /* Today highlight */
+    .today {
+      outline: 3px solid #007AFF;
+      outline-offset: -3px;
+    }
+
+    /* Selected group highlight */
+    .selected {
+      box-shadow: inset 0 0 0 3px #ff9500;
+    }
   </style>
 </head>
 
 <body>
 
-<h1 id="monthTitle"></h1>
+<div class="controls">
+  <select id="groupSelect" onchange="saveGroup()">
+    <option value="-1">All Groups</option>
+    <option value="0">A</option>
+    <option value="1">B</option>
+    <option value="2">C</option>
+    <option value="3">D</option>
+    <option value="4">E</option>
+  </select>
+
+  <button onclick="toggleLang()">AR / EN</button>
+</div>
+
+<div class="month-nav">
+  <button onclick="changeMonth(-1)">◀</button>
+  <h1 id="monthTitle"></h1>
+  <button onclick="changeMonth(1)">▶</button>
+</div>
 
 <div class="calendar">
   <div class="header">
-    <div>Date</div>
-    <div>A</div>
-    <div>B</div>
-    <div>C</div>
-    <div>D</div>
-    <div>E</div>
+    <div id="dateLabel">Date</div>
+    <div>A</div><div>B</div><div>C</div><div>D</div><div>E</div>
   </div>
-
   <div id="calendarBody"></div>
 </div>
 
 <script>
-  // Shift pattern: Morning, Afternoon, Night, Off, Off
   const shifts = ["M", "A", "N", "O", "O"];
 
-  // Reference: Jan 1, 2026 = Group A = Morning
-  const referenceDate = new Date(2026, 0, 1);
+  // 🔑 FIXED BASE DATE
+  // 15 January 2026:
+  // A=M, B=A, C=N, D=O, E=O
+  const referenceDate = new Date(2026, 0, 15);
 
-  const today = new Date();
-  const year = today.getFullYear();
-  const month = today.getMonth();
+  const arabicDays = ["الأحد","الإثنين","الثلاثاء","الأربعاء","الخميس","الجمعة","السبت"];
+  const englishDays = ["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"];
 
-  // Set month title
-  document.getElementById("monthTitle").innerText =
-    today.toLocaleString("default", { month: "long" }) + " " + year;
+  let currentDate = new Date();
+  let lang = localStorage.getItem("lang") || "en";
+  const todayReal = new Date();
+  todayReal.setHours(0,0,0,0);
 
-  const daysInMonth = new Date(year, month + 1, 0).getDate();
-  const calendarBody = document.getElementById("calendarBody");
+  // Auto-load saved group
+  document.getElementById("groupSelect").value =
+    localStorage.getItem("group") ?? "-1";
 
-  for (let day = 1; day <= daysInMonth; day++) {
-    const row = document.createElement("div");
-    row.className = "row";
-
-    const dateCell = document.createElement("div");
-    dateCell.className = "date";
-    dateCell.innerText = day;
-    row.appendChild(dateCell);
-
-    const currentDate = new Date(year, month, day);
-    const diffDays = Math.floor((currentDate - referenceDate) / 86400000);
-
-    for (let group = 0; group < 5; group++) {
-      const shiftIndex = (diffDays + group) % 5;
-      const cell = document.createElement("div");
-      cell.innerText = shifts[shiftIndex];
-      cell.className = shifts[shiftIndex];
-      row.appendChild(cell);
-    }
-
-    calendarBody.appendChild(row);
+  function saveGroup() {
+    localStorage.setItem("group", document.getElementById("groupSelect").value);
+    renderCalendar();
   }
+
+  function toggleLang() {
+    lang = lang === "en" ? "ar" : "en";
+    localStorage.setItem("lang", lang);
+    renderCalendar();
+  }
+
+  function renderCalendar() {
+    const year = currentDate.getFullYear();
+    const month = currentDate.getMonth();
+    const selectedGroup = parseInt(document.getElementById("groupSelect").value);
+
+    document.getElementById("monthTitle").innerText =
+      currentDate.toLocaleString(lang === "ar" ? "ar" : "en", {
+        month: "long",
+        year: "numeric"
+      });
+
+    document.getElementById("dateLabel").innerText =
+      lang === "ar" ? "التاريخ" : "Date";
+
+    const calendarBody = document.getElementById("calendarBody");
+    calendarBody.innerHTML = "";
+
+    const daysInMonth = new Date(year, month + 1, 0).getDate();
+
+    for (let day = 1; day <= daysInMonth; day++) {
+      const row = document.createElement("div");
+      row.className = "row";
+
+      const thisDay = new Date(year, month, day);
+      thisDay.setHours(0,0,0,0);
+
+      const dateCell = document.createElement("div");
+      dateCell.className = "date";
+
+      if (thisDay.getTime() === todayReal.getTime()) {
+        dateCell.classList.add("today");
+      }
+
+      const dayName =
+        lang === "ar"
+          ? arabicDays[thisDay.getDay()]
+          : englishDays[thisDay.getDay()];
+
+      dateCell.innerHTML = `${day}<div class="day">${dayName}</div>`;
+      row.appendChild(dateCell);
+
+      const diffDays = Math.floor((thisDay - referenceDate) / 86400000);
+
+      for (let g = 0; g < 5; g++) {
+        const shiftIndex = (diffDays + g + 5) % 5;
+        const cell = document.createElement("div");
+        cell.innerText = shifts[shiftIndex];
+        cell.className = shifts[shiftIndex];
+
+        if (thisDay.getTime() === todayReal.getTime()) {
+          cell.classList.add("today");
+        }
+
+        if (selectedGroup === g) {
+          cell.classList.add("selected");
+        } else if (selectedGroup !== -1) {
+          cell.style.opacity = "0.3";
+        }
+
+        row.appendChild(cell);
+      }
+
+      calendarBody.appendChild(row);
+    }
+  }
+
+  function changeMonth(step) {
+    currentDate.setMonth(currentDate.getMonth() + step);
+    renderCalendar();
+  }
+
+  renderCalendar();
 </script>
 
 </body>
