--- a/index.html
+++ b/index.html
@@ -1,119 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Shift Calendar</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+<meta charset="UTF-8">
+<title>Shift Calendar</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="apple-mobile-web-app-capable" content="yes">
 
-  <style>
-    body {
-      margin: 0;
-      padding: 16px;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: #f2f2f7;
-    }
+<style>
+/* ---------- THEME ---------- */
+:root {
+  --bg: #f2f2f7;
+  --card: #ffffff;
+  --text: #000000;
+  --header: #e5e5ea;
+}
 
-    h1 {
-      text-align: center;
-      margin: 10px 0;
-    }
+body.dark {
+  --bg: #121212;
+  --card: #1e1e1e;
+  --text: #ffffff;
+  --header: #2a2a2a;
+}
 
-    .controls {
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 12px;
-      gap: 10px;
-    }
+body {
+  margin: 0;
+  padding: 12px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+  background: var(--bg);
+  color: var(--text);
+}
 
-    select, button {
-      padding: 8px 12px;
-      border-radius: 8px;
-      font-size: 16px;
-      border: none;
-    }
+/* ---------- CONTROLS ---------- */
+.controls {
+  display: flex;
+  justify-content: space-between;
+  gap: 8px;
+  margin-bottom: 10px;
+}
 
-    button {
-      background: #007AFF;
-      color: white;
-    }
+select, button {
+  padding: 8px 12px;
+  border-radius: 8px;
+  font-size: 15px;
+  border: none;
+}
 
-    .month-nav {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 12px;
-    }
+button {
+  background: #007AFF;
+  color: white;
+}
 
-    .month-nav button {
-      font-size: 22px;
-      padding: 6px 14px;
-      border-radius: 10px;
-      border: none;
-      background: #007AFF;
-      color: white;
-    }
+/* ---------- MONTH NAV ---------- */
+.month-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 8px;
+}
 
-    .calendar {
-      background: white;
-      border-radius: 12px;
-      overflow: hidden;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-    }
+.month-nav button {
+  font-size: 20px;
+  padding: 6px 12px;
+}
 
-    .header, .row {
-      display: grid;
-      grid-template-columns: 100px repeat(5, 1fr);
-      text-align: center;
-      align-items: center;
-    }
+/* ---------- CALENDAR ---------- */
+.calendar-wrapper {
+  max-height: 75vh;
+  overflow: auto;
+  background: var(--card);
+  border-radius: 12px;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+}
 
-    .header {
-      background: #e5e5ea;
-      font-weight: bold;
-      height: 44px;
-    }
+.calendar {
+  min-width: 600px;
+}
 
-    .row div {
-      padding: 10px 0;
-      border-bottom: 1px solid #ddd;
-      font-size: 15px;
-    }
+.header, .row {
+  display: grid;
+  grid-template-columns: 110px repeat(5, 1fr);
+  text-align: center;
+}
 
-    .date {
-      font-weight: bold;
-      line-height: 1.2;
-    }
+.header {
+  position: sticky;
+  top: 0;
+  background: var(--header);
+  z-index: 5;
+  font-weight: bold;
+}
 
-    .day {
-      font-size: 13px;
-      color: #555;
-    }
+.row div, .header div {
+  padding: 10px 0;
+  border-bottom: 1px solid #ccc;
+}
 
-    /* Shift colors */
-    .M { background: #ffe599; }
-    .A { background: #9fc5e8; }
-    .N { background: #8e7cc3; color: white; }
-    .O { background: #d9d9d9; }
+/* Sticky date column */
+.date-cell, .header-date {
+  position: sticky;
+  left: 0;
+  background: var(--card);
+  z-index: 4;
+  font-weight: bold;
+}
 
-    /* Today highlight */
-    .today {
-      outline: 3px solid #007AFF;
-      outline-offset: -3px;
-    }
+/* ---------- DAY LABEL ---------- */
+.day {
+  font-size: 12px;
+  opacity: 0.7;
+}
 
-    /* Selected group highlight */
-    .selected {
-      box-shadow: inset 0 0 0 3px #ff9500;
-    }
-  </style>
+/* ---------- SHIFTS ---------- */
+.M { background: #ffe599; }
+.A { background: #9fc5e8; }
+.N { background: #8e7cc3; color: white; }
+.O { background: #d9d9d9; }
+
+/* ---------- TODAY ---------- */
+.today {
+  outline: 3px solid #007AFF;
+  outline-offset: -3px;
+}
+
+/* ---------- SELECTED GROUP ---------- */
+.selected {
+  box-shadow: inset 0 0 0 3px #ff9500;
+}
+
+.fade {
+  opacity: 0.25;
+}
+</style>
 </head>
 
 <body>
 
 <div class="controls">
-  <select id="groupSelect" onchange="saveGroup()">
-    <option value="-1">All Groups</option>
+  <select id="groupSelect" onchange="saveSettings()">
+    <option value="-1">All</option>
     <option value="0">A</option>
     <option value="1">B</option>
     <option value="2">C</option>
@@ -122,125 +146,134 @@
   </select>
 
   <button onclick="toggleLang()">AR / EN</button>
+  <button onclick="toggleDark()">🌙</button>
 </div>
 
 <div class="month-nav">
   <button onclick="changeMonth(-1)">◀</button>
-  <h1 id="monthTitle"></h1>
+  <h2 id="monthTitle"></h2>
   <button onclick="changeMonth(1)">▶</button>
 </div>
 
-<div class="calendar">
-  <div class="header">
-    <div id="dateLabel">Date</div>
-    <div>A</div><div>B</div><div>C</div><div>D</div><div>E</div>
+<div class="calendar-wrapper">
+  <div class="calendar">
+    <div class="header">
+      <div class="header-date" id="dateLabel">Date</div>
+      <div>A</div><div>B</div><div>C</div><div>D</div><div>E</div>
+    </div>
+    <div id="calendarBody"></div>
   </div>
-  <div id="calendarBody"></div>
 </div>
 
 <script>
-  const shifts = ["M", "A", "N", "O", "O"];
+/* ---------- DATA ---------- */
+const shiftCodes = ["M","A","N","O","O"];
 
-  // 🔑 FIXED BASE DATE
-  // 15 January 2026:
-  // A=M, B=A, C=N, D=O, E=O
-  const referenceDate = new Date(2026, 0, 15);
+const shiftNames = {
+  en: { M:"Morning", A:"Afternoon", N:"Night", O:"Off" },
+  ar: { M:"صبح", A:"عصر", N:"ليل", O:"راحة" }
+};
 
-  const arabicDays = ["الأحد","الإثنين","الثلاثاء","الأربعاء","الخميس","الجمعة","السبت"];
-  const englishDays = ["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"];
+const days = {
+  en: ["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
+  ar: ["الأحد","الإثنين","الثلاثاء","الأربعاء","الخميس","الجمعة","السبت"]
+};
 
-  let currentDate = new Date();
-  let lang = localStorage.getItem("lang") || "en";
-  const todayReal = new Date();
-  todayReal.setHours(0,0,0,0);
+// 🔑 FIXED BASE: 15 JAN → A=M, B=A, C=N, D/E=O
+const referenceDate = new Date(2026,0,15);
 
-  // Auto-load saved group
-  document.getElementById("groupSelect").value =
-    localStorage.getItem("group") ?? "-1";
+/* ---------- STATE ---------- */
+let currentDate = new Date();
+let lang = localStorage.getItem("lang") || "en";
+let dark = localStorage.getItem("dark") === "true";
 
-  function saveGroup() {
-    localStorage.setItem("group", document.getElementById("groupSelect").value);
-    renderCalendar();
-  }
+document.getElementById("groupSelect").value =
+  localStorage.getItem("group") ?? "-1";
 
-  function toggleLang() {
-    lang = lang === "en" ? "ar" : "en";
-    localStorage.setItem("lang", lang);
-    renderCalendar();
-  }
+if (dark) document.body.classList.add("dark");
 
-  function renderCalendar() {
-    const year = currentDate.getFullYear();
-    const month = currentDate.getMonth();
-    const selectedGroup = parseInt(document.getElementById("groupSelect").value);
-
-    document.getElementById("monthTitle").innerText =
-      currentDate.toLocaleString(lang === "ar" ? "ar" : "en", {
-        month: "long",
-        year: "numeric"
-      });
-
-    document.getElementById("dateLabel").innerText =
-      lang === "ar" ? "التاريخ" : "Date";
-
-    const calendarBody = document.getElementById("calendarBody");
-    calendarBody.innerHTML = "";
-
-    const daysInMonth = new Date(year, month + 1, 0).getDate();
-
-    for (let day = 1; day <= daysInMonth; day++) {
-      const row = document.createElement("div");
-      row.className = "row";
-
-      const thisDay = new Date(year, month, day);
-      thisDay.setHours(0,0,0,0);
-
-      const dateCell = document.createElement("div");
-      dateCell.className = "date";
-
-      if (thisDay.getTime() === todayReal.getTime()) {
-        dateCell.classList.add("today");
-      }
-
-      const dayName =
-        lang === "ar"
-          ? arabicDays[thisDay.getDay()]
-          : englishDays[thisDay.getDay()];
-
-      dateCell.innerHTML = `${day}<div class="day">${dayName}</div>`;
-      row.appendChild(dateCell);
-
-      const diffDays = Math.floor((thisDay - referenceDate) / 86400000);
-
-      for (let g = 0; g < 5; g++) {
-        const shiftIndex = (diffDays + g + 5) % 5;
-        const cell = document.createElement("div");
-        cell.innerText = shifts[shiftIndex];
-        cell.className = shifts[shiftIndex];
-
-        if (thisDay.getTime() === todayReal.getTime()) {
-          cell.classList.add("today");
-        }
-
-        if (selectedGroup === g) {
-          cell.classList.add("selected");
-        } else if (selectedGroup !== -1) {
-          cell.style.opacity = "0.3";
-        }
-
-        row.appendChild(cell);
-      }
-
-      calendarBody.appendChild(row);
-    }
-  }
-
-  function changeMonth(step) {
-    currentDate.setMonth(currentDate.getMonth() + step);
-    renderCalendar();
-  }
-
+/* ---------- FUNCTIONS ---------- */
+function saveSettings() {
+  localStorage.setItem("group", document.getElementById("groupSelect").value);
   renderCalendar();
+}
+
+function toggleLang() {
+  lang = lang === "en" ? "ar" : "en";
+  localStorage.setItem("lang", lang);
+  renderCalendar();
+}
+
+function toggleDark() {
+  dark = !dark;
+  localStorage.setItem("dark", dark);
+  document.body.classList.toggle("dark");
+}
+
+function changeMonth(step) {
+  currentDate.setMonth(currentDate.getMonth() + step);
+  renderCalendar();
+}
+
+function renderCalendar() {
+  const year = currentDate.getFullYear();
+  const month = currentDate.getMonth();
+  const selectedGroup = parseInt(document.getElementById("groupSelect").value);
+
+  document.getElementById("monthTitle").innerText =
+    currentDate.toLocaleString(lang, { month:"long", year:"numeric" });
+
+  document.getElementById("dateLabel").innerText =
+    lang === "ar" ? "التاريخ" : "Date";
+
+  const body = document.getElementById("calendarBody");
+  body.innerHTML = "";
+
+  const today = new Date();
+  today.setHours(0,0,0,0);
+
+  const daysInMonth = new Date(year, month+1, 0).getDate();
+
+  for (let d=1; d<=daysInMonth; d++) {
+    const row = document.createElement("div");
+    row.className = "row";
+
+    const thisDay = new Date(year,month,d);
+    thisDay.setHours(0,0,0,0);
+
+    const dateCell = document.createElement("div");
+    dateCell.className = "date-cell";
+    dateCell.innerHTML = `${d}<div class="day">${days[lang][thisDay.getDay()]}</div>`;
+
+    if (thisDay.getTime() === today.getTime())
+      dateCell.classList.add("today");
+
+    row.appendChild(dateCell);
+
+    const diff = Math.floor((thisDay - referenceDate) / 86400000);
+
+    for (let g=0; g<5; g++) {
+      const idx = (diff + g + 5) % 5;
+      const code = shiftCodes[idx];
+
+      const cell = document.createElement("div");
+      cell.className = code;
+      cell.innerText = shiftNames[lang][code];
+
+      if (thisDay.getTime() === today.getTime())
+        cell.classList.add("today");
+
+      if (selectedGroup === g) cell.classList.add("selected");
+      else if (selectedGroup !== -1) cell.classList.add("fade");
+
+      row.appendChild(cell);
+    }
+
+    body.appendChild(row);
+  }
+}
+
+renderCalendar();
 </script>
 
 </body>
