--- a/index.html
+++ b/index.html
@@ -7,129 +7,55 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 
 <style>
-/* ---------- THEME ---------- */
 :root {
-  --bg: #f2f2f7;
-  --card: #ffffff;
-  --text: #000000;
-  --header: #e5e5ea;
+  --bg:#f2f2f7; --card:#fff; --text:#000; --header:#e5e5ea;
 }
-
 body.dark {
-  --bg: #121212;
-  --card: #1e1e1e;
-  --text: #ffffff;
-  --header: #2a2a2a;
+  --bg:#121212; --card:#1e1e1e; --text:#fff; --header:#2a2a2a;
 }
-
 body {
-  margin: 0;
-  padding: 12px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-  background: var(--bg);
-  color: var(--text);
+  margin:0; padding:12px;
+  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
+  background:var(--bg); color:var(--text);
 }
-
-/* ---------- CONTROLS ---------- */
-.controls {
-  display: flex;
-  justify-content: space-between;
-  gap: 8px;
-  margin-bottom: 10px;
+.controls, .month-nav {
+  display:flex; justify-content:space-between; gap:8px; margin-bottom:10px;
 }
-
 select, button {
-  padding: 8px 12px;
-  border-radius: 8px;
-  font-size: 15px;
-  border: none;
+  padding:8px 12px; border-radius:8px; font-size:15px; border:none;
 }
-
-button {
-  background: #007AFF;
-  color: white;
-}
-
-/* ---------- MONTH NAV ---------- */
-.month-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 8px;
-}
-
-.month-nav button {
-  font-size: 20px;
-  padding: 6px 12px;
-}
-
-/* ---------- CALENDAR ---------- */
+button { background:#007AFF; color:white; }
 .calendar-wrapper {
-  max-height: 75vh;
-  overflow: auto;
-  background: var(--card);
-  border-radius: 12px;
-  box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+  max-height:75vh; overflow:auto;
+  background:var(--card); border-radius:12px;
 }
-
-.calendar {
-  min-width: 600px;
-}
-
+.calendar { min-width:600px; }
 .header, .row {
-  display: grid;
-  grid-template-columns: 110px repeat(5, 1fr);
-  text-align: center;
+  display:grid; grid-template-columns:120px repeat(5,1fr);
+  text-align:center;
 }
-
 .header {
-  position: sticky;
-  top: 0;
-  background: var(--header);
-  z-index: 5;
-  font-weight: bold;
+  position:sticky; top:0; background:var(--header); z-index:5;
+  font-weight:bold;
 }
-
+.date-cell {
+  position:sticky; left:0; background:var(--card); z-index:4;
+  font-weight:bold;
+}
 .row div, .header div {
-  padding: 10px 0;
-  border-bottom: 1px solid #ccc;
+  padding:8px 0; border-bottom:1px solid #ccc;
 }
+.day { font-size:12px; opacity:.7; }
 
-/* Sticky date column */
-.date-cell, .header-date {
-  position: sticky;
-  left: 0;
-  background: var(--card);
-  z-index: 4;
-  font-weight: bold;
-}
+.M{background:#ffe599;} .A{background:#9fc5e8;}
+.N{background:#8e7cc3;color:white;} .O{background:#d9d9d9;}
 
-/* ---------- DAY LABEL ---------- */
-.day {
-  font-size: 12px;
-  opacity: 0.7;
-}
+.today{outline:3px solid #007AFF;}
+.selected{box-shadow: inset 0 0 0 3px #ff9500;}
+.fade{opacity:.25;}
 
-/* ---------- SHIFTS ---------- */
-.M { background: #ffe599; }
-.A { background: #9fc5e8; }
-.N { background: #8e7cc3; color: white; }
-.O { background: #d9d9d9; }
-
-/* ---------- TODAY ---------- */
-.today {
-  outline: 3px solid #007AFF;
-  outline-offset: -3px;
-}
-
-/* ---------- SELECTED GROUP ---------- */
-.selected {
-  box-shadow: inset 0 0 0 3px #ff9500;
-}
-
-.fade {
-  opacity: 0.25;
-}
+.ramadan { background:#c6efce !important; }
+.holiday { background:#f4cccc !important; font-weight:bold; }
 </style>
 </head>
 
@@ -138,13 +64,10 @@ button {
 <div class="controls">
   <select id="groupSelect" onchange="saveSettings()">
     <option value="-1">All</option>
-    <option value="0">A</option>
-    <option value="1">B</option>
-    <option value="2">C</option>
-    <option value="3">D</option>
+    <option value="0">A</option><option value="1">B</option>
+    <option value="2">C</option><option value="3">D</option>
     <option value="4">E</option>
   </select>
-
   <button onclick="toggleLang()">AR / EN</button>
   <button onclick="toggleDark()">🌙</button>
 </div>
@@ -158,7 +81,7 @@ button {
 <div class="calendar-wrapper">
   <div class="calendar">
     <div class="header">
-      <div class="header-date" id="dateLabel">Date</div>
+      <div class="date-cell" id="dateLabel">Date</div>
       <div>A</div><div>B</div><div>C</div><div>D</div><div>E</div>
     </div>
     <div id="calendarBody"></div>
@@ -166,114 +89,95 @@ button {
 </div>
 
 <script>
-/* ---------- DATA ---------- */
-const shiftCodes = ["M","A","N","O","O"];
-
-const shiftNames = {
-  en: { M:"Morning", A:"Afternoon", N:"Night", O:"Off" },
-  ar: { M:"صبح", A:"عصر", N:"ليل", O:"راحة" }
+const shiftCodes=["M","A","N","O","O"];
+const shiftNames={
+  en:{M:"Morning",A:"Afternoon",N:"Night",O:"Off"},
+  ar:{M:"صبح",A:"عصر",N:"ليل",O:"راحة"}
+};
+const days={
+  en:["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
+  ar:["الأحد","الإثنين","الثلاثاء","الأربعاء","الخميس","الجمعة","السبت"]
 };
 
-const days = {
-  en: ["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
-  ar: ["الأحد","الإثنين","الثلاثاء","الأربعاء","الخميس","الجمعة","السبت"]
+// 🔑 Base reference
+const referenceDate=new Date(2026,0,15);
+
+// 🕌 Islamic calendar (OFFICIAL PRESET)
+const islamicEvents={
+  2026:{
+    ramadanStart:"2026-02-18",
+    ramadanEnd:"2026-03-19",
+    eidFitr:"2026-03-20",
+    arafah:"2026-05-26",
+    eidAdha:"2026-05-27"
+  }
 };
 
-// 🔑 FIXED BASE: 15 JAN → A=M, B=A, C=N, D/E=O
-const referenceDate = new Date(2026,0,15);
+let currentDate=new Date();
+let lang=localStorage.getItem("lang")||"en";
+let dark=localStorage.getItem("dark")==="true";
+document.getElementById("groupSelect").value=localStorage.getItem("group")??"-1";
+if(dark)document.body.classList.add("dark");
 
-/* ---------- STATE ---------- */
-let currentDate = new Date();
-let lang = localStorage.getItem("lang") || "en";
-let dark = localStorage.getItem("dark") === "true";
-
-document.getElementById("groupSelect").value =
-  localStorage.getItem("group") ?? "-1";
-
-if (dark) document.body.classList.add("dark");
-
-/* ---------- FUNCTIONS ---------- */
-function saveSettings() {
-  localStorage.setItem("group", document.getElementById("groupSelect").value);
-  renderCalendar();
+function saveSettings(){
+  localStorage.setItem("group",groupSelect.value); render();
 }
-
-function toggleLang() {
-  lang = lang === "en" ? "ar" : "en";
-  localStorage.setItem("lang", lang);
-  renderCalendar();
+function toggleLang(){
+  lang=lang==="en"?"ar":"en"; localStorage.setItem("lang",lang); render();
 }
-
-function toggleDark() {
-  dark = !dark;
-  localStorage.setItem("dark", dark);
+function toggleDark(){
+  dark=!dark; localStorage.setItem("dark",dark);
   document.body.classList.toggle("dark");
 }
-
-function changeMonth(step) {
-  currentDate.setMonth(currentDate.getMonth() + step);
-  renderCalendar();
+function changeMonth(n){
+  currentDate.setMonth(currentDate.getMonth()+n); render();
 }
 
-function renderCalendar() {
-  const year = currentDate.getFullYear();
-  const month = currentDate.getMonth();
-  const selectedGroup = parseInt(document.getElementById("groupSelect").value);
+function render(){
+  const year=currentDate.getFullYear(), month=currentDate.getMonth();
+  monthTitle.innerText=currentDate.toLocaleString(lang,{month:"long",year:"numeric"});
+  dateLabel.innerText=lang==="ar"?"التاريخ":"Date";
+  calendarBody.innerHTML="";
+  const selected=parseInt(groupSelect.value);
+  const today=new Date(); today.setHours(0,0,0,0);
+  const daysInMonth=new Date(year,month+1,0).getDate();
+  const events=islamicEvents[year];
 
-  document.getElementById("monthTitle").innerText =
-    currentDate.toLocaleString(lang, { month:"long", year:"numeric" });
+  for(let d=1;d<=daysInMonth;d++){
+    const row=document.createElement("div"); row.className="row";
+    const date=new Date(year,month,d); date.setHours(0,0,0,0);
 
-  document.getElementById("dateLabel").innerText =
-    lang === "ar" ? "التاريخ" : "Date";
+    const dateCell=document.createElement("div");
+    dateCell.className="date-cell";
+    dateCell.innerHTML=`${d}<div class="day">${days[lang][date.getDay()]}</div>`;
+    if(date.getTime()===today.getTime())dateCell.classList.add("today");
 
-  const body = document.getElementById("calendarBody");
-  body.innerHTML = "";
-
-  const today = new Date();
-  today.setHours(0,0,0,0);
-
-  const daysInMonth = new Date(year, month+1, 0).getDate();
-
-  for (let d=1; d<=daysInMonth; d++) {
-    const row = document.createElement("div");
-    row.className = "row";
-
-    const thisDay = new Date(year,month,d);
-    thisDay.setHours(0,0,0,0);
-
-    const dateCell = document.createElement("div");
-    dateCell.className = "date-cell";
-    dateCell.innerHTML = `${d}<div class="day">${days[lang][thisDay.getDay()]}</div>`;
-
-    if (thisDay.getTime() === today.getTime())
-      dateCell.classList.add("today");
+    // Ramadan & holidays
+    if(events){
+      const iso=date.toISOString().split("T")[0];
+      if(iso>=events.ramadanStart && iso<=events.ramadanEnd)
+        dateCell.classList.add("ramadan");
+      if([events.eidFitr,events.arafah,events.eidAdha].includes(iso))
+        dateCell.classList.add("holiday");
+    }
 
     row.appendChild(dateCell);
 
-    const diff = Math.floor((thisDay - referenceDate) / 86400000);
-
-    for (let g=0; g<5; g++) {
-      const idx = (diff + g + 5) % 5;
-      const code = shiftCodes[idx];
-
-      const cell = document.createElement("div");
-      cell.className = code;
-      cell.innerText = shiftNames[lang][code];
-
-      if (thisDay.getTime() === today.getTime())
-        cell.classList.add("today");
-
-      if (selectedGroup === g) cell.classList.add("selected");
-      else if (selectedGroup !== -1) cell.classList.add("fade");
-
+    const diff=Math.floor((date-referenceDate)/86400000);
+    for(let g=0;g<5;g++){
+      const idx=(diff+g+5)%5;
+      const cell=document.createElement("div");
+      cell.innerText=shiftNames[lang][shiftCodes[idx]];
+      cell.className=shiftCodes[idx];
+      if(date.getTime()===today.getTime())cell.classList.add("today");
+      if(selected===g)cell.classList.add("selected");
+      else if(selected!==-1)cell.classList.add("fade");
       row.appendChild(cell);
     }
-
-    body.appendChild(row);
+    calendarBody.appendChild(row);
   }
 }
-
-renderCalendar();
+render();
 </script>
 
 </body>
