--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <title>Shift Calendar</title>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+  <!-- ✅ APP ICON (THIS IS THE IMPORTANT PART) -->
+  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="icon" type="image/png" href="icon.png">
+
+  <!-- Styles -->
+  <style>
+    /* (your existing CSS stays below in the file) */
+  </style>
+</head>
 <meta charset="UTF-8">
 <title>Shift Calendar</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
