--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
   <!-- ✅ APP ICON (THIS IS THE IMPORTANT PART) -->
-  <link rel="apple-touch-icon" href="icon.png">
-  <link rel="icon" type="image/png" href="icon.png">
+  <link rel="apple-touch-icon" href="icon.png.PNG">
+  <link rel="icon" type="image/png" href="icon.png.PNG">
 
   <!-- Styles -->
   <style>
