--- a/index.html
+++ b/index.html
@@ -1,26 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Shift Calendar</title>
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-
-  <!-- ✅ APP ICON (THIS IS THE IMPORTANT PART) -->
-  <link rel="apple-touch-icon" href="icon.png.PNG">
-  <link rel="icon" type="image/png" href="icon.png.PNG">
-
-  <!-- Styles -->
-  <style>
-    /* (your existing CSS stays below in the file) */
-  </style>
-</head>
 <meta charset="UTF-8">
-<title>Shift Calendar</title>
+
+<title>My Shifts</title>
+<meta name="apple-mobile-web-app-title" content="My Shifts">
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+<link rel="apple-touch-icon" href="icon.png.PNG">
+<link rel="icon" type="image/png" href="icon.png.PNG">
 
 <style>
 :root {
@@ -34,19 +25,23 @@ body {
   font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
   background:var(--bg); color:var(--text);
 }
-.controls, .month-nav {
+
+.controls,.month-nav {
   display:flex; justify-content:space-between; gap:8px; margin-bottom:10px;
 }
-select, button {
+select,button {
   padding:8px 12px; border-radius:8px; font-size:15px; border:none;
 }
 button { background:#007AFF; color:white; }
+
 .calendar-wrapper {
   max-height:75vh; overflow:auto;
   background:var(--card); border-radius:12px;
+  box-shadow:0 5px 15px rgba(0,0,0,0.1);
 }
 .calendar { min-width:600px; }
-.header, .row {
+
+.header,.row {
   display:grid; grid-template-columns:120px repeat(5,1fr);
   text-align:center;
 }
@@ -58,30 +53,34 @@ button { background:#007AFF; color:white; }
   position:sticky; left:0; background:var(--card); z-index:4;
   font-weight:bold;
 }
-.row div, .header div {
+.row div,.header div {
   padding:8px 0; border-bottom:1px solid #ccc;
 }
 .day { font-size:12px; opacity:.7; }
 
-.M{background:#ffe599;} .A{background:#9fc5e8;}
-.N{background:#8e7cc3;color:white;} .O{background:#d9d9d9;}
+.M{background:#ffe599;}
+.A{background:#9fc5e8;}
+.N{background:#8e7cc3;color:white;}
+.O{background:#d9d9d9;}
 
 .today{outline:3px solid #007AFF;}
 .selected{box-shadow: inset 0 0 0 3px #ff9500;}
 .fade{opacity:.25;}
 
-.ramadan { background:#c6efce !important; }
-.holiday { background:#f4cccc !important; font-weight:bold; }
+.ramadan{background:#c6efce !important;}
+.holiday{background:#f4cccc !important;font-weight:bold;}
 </style>
 </head>
 
 <body>
 
 <div class="controls">
-  <select id="groupSelect" onchange="saveSettings()">
+  <select id="groupSelect" onchange="saveGroup()" disabled>
     <option value="-1">All</option>
-    <option value="0">A</option><option value="1">B</option>
-    <option value="2">C</option><option value="3">D</option>
+    <option value="0">A</option>
+    <option value="1">B</option>
+    <option value="2">C</option>
+    <option value="3">D</option>
     <option value="4">E</option>
   </select>
   <button onclick="toggleLang()">AR / EN</button>
@@ -105,6 +104,7 @@ button { background:#007AFF; color:white; }
 </div>
 
 <script>
+/* ---------- DATA ---------- */
 const shiftCodes=["M","A","N","O","O"];
 const shiftNames={
   en:{M:"Morning",A:"Afternoon",N:"Night",O:"Off"},
@@ -115,10 +115,10 @@ const days={
   ar:["الأحد","الإثنين","الثلاثاء","الأربعاء","الخميس","الجمعة","السبت"]
 };
 
-// 🔑 Base reference
+// Base reference: 15 Jan (A=M, B=A, C=N, D/E=O)
 const referenceDate=new Date(2026,0,15);
 
-// 🕌 Islamic calendar (OFFICIAL PRESET)
+// Kuwait Islamic dates (example)
 const islamicEvents={
   2026:{
     ramadanStart:"2026-02-18",
@@ -129,46 +129,77 @@ const islamicEvents={
   }
 };
 
+/* ---------- STATE ---------- */
 let currentDate=new Date();
 let lang=localStorage.getItem("lang")||"en";
 let dark=localStorage.getItem("dark")==="true";
-document.getElementById("groupSelect").value=localStorage.getItem("group")??"-1";
+
+/* ---------- LEVEL-2 GROUP FROM LINK ---------- */
+const params=new URLSearchParams(window.location.search);
+const linkGroup=params.get("group"); // A B C D E
+
+if(linkGroup){
+  const map={A:0,B:1,C:2,D:3,E:4};
+  localStorage.setItem("group",map[linkGroup.toUpperCase()]);
+}
+
+const savedGroup=localStorage.getItem("group") ?? "-1";
+groupSelect.value=savedGroup;
+
+// Lock selector if group came from link
+if(linkGroup){
+  groupSelect.disabled=true;
+}else{
+  groupSelect.disabled=false;
+}
+
 if(dark)document.body.classList.add("dark");
 
-function saveSettings(){
-  localStorage.setItem("group",groupSelect.value); render();
+/* ---------- FUNCTIONS ---------- */
+function saveGroup(){
+  localStorage.setItem("group",groupSelect.value);
+  render();
 }
 function toggleLang(){
-  lang=lang==="en"?"ar":"en"; localStorage.setItem("lang",lang); render();
+  lang=lang==="en"?"ar":"en";
+  localStorage.setItem("lang",lang);
+  render();
 }
 function toggleDark(){
-  dark=!dark; localStorage.setItem("dark",dark);
+  dark=!dark;
+  localStorage.setItem("dark",dark);
   document.body.classList.toggle("dark");
 }
 function changeMonth(n){
-  currentDate.setMonth(currentDate.getMonth()+n); render();
+  currentDate.setMonth(currentDate.getMonth()+n);
+  render();
 }
 
 function render(){
-  const year=currentDate.getFullYear(), month=currentDate.getMonth();
+  const year=currentDate.getFullYear();
+  const month=currentDate.getMonth();
+  const selected=parseInt(groupSelect.value);
+
   monthTitle.innerText=currentDate.toLocaleString(lang,{month:"long",year:"numeric"});
   dateLabel.innerText=lang==="ar"?"التاريخ":"Date";
+
   calendarBody.innerHTML="";
-  const selected=parseInt(groupSelect.value);
   const today=new Date(); today.setHours(0,0,0,0);
   const daysInMonth=new Date(year,month+1,0).getDate();
   const events=islamicEvents[year];
 
   for(let d=1;d<=daysInMonth;d++){
-    const row=document.createElement("div"); row.className="row";
-    const date=new Date(year,month,d); date.setHours(0,0,0,0);
+    const row=document.createElement("div");
+    row.className="row";
+
+    const date=new Date(year,month,d);
+    date.setHours(0,0,0,0);
 
     const dateCell=document.createElement("div");
     dateCell.className="date-cell";
     dateCell.innerHTML=`${d}<div class="day">${days[lang][date.getDay()]}</div>`;
     if(date.getTime()===today.getTime())dateCell.classList.add("today");
 
-    // Ramadan & holidays
     if(events){
       const iso=date.toISOString().split("T")[0];
       if(iso>=events.ramadanStart && iso<=events.ramadanEnd)
@@ -185,9 +216,11 @@ function render(){
       const cell=document.createElement("div");
       cell.innerText=shiftNames[lang][shiftCodes[idx]];
       cell.className=shiftCodes[idx];
+
       if(date.getTime()===today.getTime())cell.classList.add("today");
       if(selected===g)cell.classList.add("selected");
       else if(selected!==-1)cell.classList.add("fade");
+
       row.appendChild(cell);
     }
     calendarBody.appendChild(row);
